package com.japhy.design.command;

/**
 * @author Japhy
 * @since 2020/11/20 14:37
 */
public enum Visibility {

    VISIBLE, INVISIBLE

}
